testdata/baselines/reference/effect-v4/missingReturnYieldStar_yieldable.errors.txt
=== Metadata ===
Effect version: 4.0.0-beta.27

/.src/missingReturnYieldStar_yieldable.ts(6,13): error TS377006: It is recommended to use return yield* for Effects that never succeed to signal a definitive exit point for type narrowing and tooling support. effect(missingReturnYieldStar)


==== /.src/missingReturnYieldStar_yieldable.ts (1 errors) ====
    import { Effect, Option } from "effect"
    
    export const shouldComplain = (n: number) =>
        Effect.gen(function*() {
            if (n === 0) {
                yield* Option.none() // should trigger because Option<A> is yieldable
                ~~~~~
!!! error TS377006: It is recommended to use return yield* for Effects that never succeed to signal a definitive exit point for type narrowing and tooling support. effect(missingReturnYieldStar)
            }
            return n / 1
        })
    
